# just-prompt

./: .env.sample  .gitignore  .mcp.json  README.md  list_models.py  pyproject.toml
.claude/: settings.json
.claude/commands/: context_prime.md  jprompt_big3_diff_review.md  jprompt_big3_thinkers.md  jprompt_groq_pack_2arg.md  jprompt_ultra_diff_review.md  project_hello_w_name.md
prompts/responses/: mock_bin_search_q_deepseek-r1-distill-llama-70b-specdec.txt  mock_bin_search_q_qwen-2.5-32b.txt  mock_bin_search_q_qwen-qwq-32b.txt
specs/: gemini-2-5-flash-reasoning.md  new-tool-llm-as-a-ceo.md  oai-reasoning-levels.md
src/just_prompt/: __main__.py  server.py
src/just_prompt/atoms/llm_providers/: anthropic.py  gemini.py  ollama.py  openai.py
src/just_prompt/atoms/shared/: data_types.py  model_router.py  utils.py  validator.py
src/just_prompt/molecules/: ceo_and_board_prompt.py  prompt.py  prompt_from_file.py  prompt_from_file_to_file.py
src/just_prompt/tests/atoms/llm_providers/: test_anthropic.py  test_gemini.py  test_groq.py  test_ollama.py  test_openai.py
src/just_prompt/tests/atoms/shared/: test_model_router.py  test_validator.py
src/just_prompt/tests/molecules/: test_ceo_and_board_prompt.py  test_list_models.py  test_list_providers.py  test_prompt.py  test_prompt_from_file.py  test_prompt_from_file_to_file.py
